organiser le dossier

--- a/analisiskey.ipynb
+++ b/analisiskey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2020= pd.read_excel(\"./Data/Da2020.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2021= pd.read_excel(\"./Data/Da2020.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ADM_APP_DATE</th>\n",
+       "      <th>Date de fin de saisie</th>\n",
+       "      <th>Date de lancement</th>\n",
+       "      <th>PREPADATE</th>\n",
+       "      <th>Statut</th>\n",
+       "      <th>TECH_APP_DATE</th>\n",
+       "      <th>Enregistrement DA</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Ouverture DA</th>\n",
+       "      <th>Folder #</th>\n",
+       "      <th>Numero commande interne</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>METHOD</th>\n",
+       "      <th>Team</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-02-11 11:53:42</td>\n",
+       "      <td>2021-01-08 13:20:03</td>\n",
+       "      <td>2021-01-05 09:45:26</td>\n",
+       "      <td>2021-01-05 09:19:37</td>\n",
+       "      <td>AdmOK</td>\n",
+       "      <td>2021-02-08 16:53:37</td>\n",
+       "      <td>2020-11-26</td>\n",
+       "      <td>Done</td>\n",
+       "      <td>2021-01-04 11:09:44</td>\n",
+       "      <td>K21000001</td>\n",
+       "      <td>ACH0090174</td>\n",
+       "      <td>SADAPS BARDAHL ADDITIVES ET LUBRICANTS SA</td>\n",
+       "      <td>Act. Bactéricide surface</td>\n",
+       "      <td>Biocides</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-01-27 10:37:14</td>\n",
+       "      <td>2021-01-26 19:03:21</td>\n",
+       "      <td>2021-01-05 12:00:37</td>\n",
+       "      <td>2021-01-05 08:00:51</td>\n",
+       "      <td>AdmOK</td>\n",
+       "      <td>2021-01-27 10:29:33</td>\n",
+       "      <td>2020-12-24</td>\n",
+       "      <td>Done</td>\n",
+       "      <td>2021-01-04 11:45:36</td>\n",
+       "      <td>K21000002</td>\n",
+       "      <td>CAC20FRO0006530</td>\n",
+       "      <td>THEA</td>\n",
+       "      <td>Stérilité - PE</td>\n",
+       "      <td>Pharmaceutique</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-01-27 10:38:07</td>\n",
+       "      <td>2021-01-26 19:03:21</td>\n",
+       "      <td>2021-01-05 12:00:37</td>\n",
+       "      <td>2021-01-05 08:00:51</td>\n",
+       "      <td>AdmOK</td>\n",
+       "      <td>2021-01-27 10:30:05</td>\n",
+       "      <td>2020-12-24</td>\n",
+       "      <td>Done</td>\n",
+       "      <td>2021-01-04 11:45:36</td>\n",
+       "      <td>K21000002</td>\n",
+       "      <td>CAC20FRO0006530</td>\n",
+       "      <td>THEA</td>\n",
+       "      <td>Stérilité - PE</td>\n",
+       "      <td>Pharmaceutique</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-01-27 10:39:11</td>\n",
+       "      <td>2021-01-26 19:03:21</td>\n",
+       "      <td>2021-01-05 12:00:37</td>\n",
+       "      <td>2021-01-05 08:00:51</td>\n",
+       "      <td>AdmOK</td>\n",
+       "      <td>2021-01-27 10:30:54</td>\n",
+       "      <td>2020-12-24</td>\n",
+       "      <td>Done</td>\n",
+       "      <td>2021-01-04 11:45:36</td>\n",
+       "      <td>K21000002</td>\n",
+       "      <td>CAC20FRO0006530</td>\n",
+       "      <td>THEA</td>\n",
+       "      <td>Stérilité - PE</td>\n",
+       "      <td>Pharmaceutique</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-01-27 10:40:06</td>\n",
+       "      <td>2021-01-26 19:03:21</td>\n",
+       "      <td>2021-01-05 12:00:37</td>\n",
+       "      <td>2021-01-05 08:00:51</td>\n",
+       "      <td>AdmOK</td>\n",
+       "      <td>2021-01-27 10:31:20</td>\n",
+       "      <td>2020-12-24</td>\n",
+       "      <td>Done</td>\n",
+       "      <td>2021-01-04 11:45:36</td>\n",
+       "      <td>K21000002</td>\n",
+       "      <td>CAC20FRO0006530</td>\n",
+       "      <td>THEA</td>\n",
+       "      <td>Stérilité - PE</td>\n",
+       "      <td>Pharmaceutique</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ADM_APP_DATE Date de fin de saisie   Date de lancement  \\\n",
+       "0 2021-02-11 11:53:42   2021-01-08 13:20:03 2021-01-05 09:45:26   \n",
+       "1 2021-01-27 10:37:14   2021-01-26 19:03:21 2021-01-05 12:00:37   \n",
+       "2 2021-01-27 10:38:07   2021-01-26 19:03:21 2021-01-05 12:00:37   \n",
+       "3 2021-01-27 10:39:11   2021-01-26 19:03:21 2021-01-05 12:00:37   \n",
+       "4 2021-01-27 10:40:06   2021-01-26 19:03:21 2021-01-05 12:00:37   \n",
+       "\n",
+       "            PREPADATE Statut       TECH_APP_DATE Enregistrement DA Status  \\\n",
+       "0 2021-01-05 09:19:37  AdmOK 2021-02-08 16:53:37        2020-11-26   Done   \n",
+       "1 2021-01-05 08:00:51  AdmOK 2021-01-27 10:29:33        2020-12-24   Done   \n",
+       "2 2021-01-05 08:00:51  AdmOK 2021-01-27 10:30:05        2020-12-24   Done   \n",
+       "3 2021-01-05 08:00:51  AdmOK 2021-01-27 10:30:54        2020-12-24   Done   \n",
+       "4 2021-01-05 08:00:51  AdmOK 2021-01-27 10:31:20        2020-12-24   Done   \n",
+       "\n",
+       "         Ouverture DA   Folder # Numero commande interne  \\\n",
+       "0 2021-01-04 11:09:44  K21000001              ACH0090174   \n",
+       "1 2021-01-04 11:45:36  K21000002         CAC20FRO0006530   \n",
+       "2 2021-01-04 11:45:36  K21000002         CAC20FRO0006530   \n",
+       "3 2021-01-04 11:45:36  K21000002         CAC20FRO0006530   \n",
+       "4 2021-01-04 11:45:36  K21000002         CAC20FRO0006530   \n",
+       "\n",
+       "                                     Company                    METHOD  \\\n",
+       "0  SADAPS BARDAHL ADDITIVES ET LUBRICANTS SA  Act. Bactéricide surface   \n",
+       "1                                       THEA            Stérilité - PE   \n",
+       "2                                       THEA            Stérilité - PE   \n",
+       "3                                       THEA            Stérilité - PE   \n",
+       "4                                       THEA            Stérilité - PE   \n",
+       "\n",
+       "             Team  \n",
+       "0        Biocides  \n",
+       "1  Pharmaceutique  \n",
+       "2  Pharmaceutique  \n",
+       "3  Pharmaceutique  \n",
+       "4  Pharmaceutique  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2021.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +278,7 @@
        "[166268 rows x 14 columns]>"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +1111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
